--- a/views/overallactivity.ejs
+++ b/views/overallactivity.ejs
@@ -136,8 +136,48 @@
               </a>
               <ul class="treeview-menu">
                 <li><a href="/kitting" style="text-decoration: none;"><i class="fa fa-cube"></i>  
-                  <span>Kitting</span>
+                  <span>CoA - Kitting</span>
                   </a>
+                </li>
+                <li class="treeview">
+                  <a href="#" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                  <span>CoA - Operator</span>
+                  <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                  </span>
+                  </a>
+                  <ul class="treeview-menu">
+                    <li>
+                      <a href="/acs/17" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                        <span>Line 17</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/acs/18" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                        <span>Line 18</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/acs/19" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                        <span>Line 19</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/acs/20" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                        <span>Line 20</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/acs/21" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                        <span>Line 21</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/acs/22" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                        <span>Line 22</span>
+                      </a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
             </li>
