--- a/views/kitting.ejs
+++ b/views/kitting.ejs
@@ -131,14 +131,14 @@
           </a>
           <ul class="treeview-menu">
 
-            <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Manufacturing</span>
+            <li class="active treeview">
+              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o text-yellow"></i> <span>Manufacturing</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/kitting" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                <li class="active treeview"><a href="/kitting" style="text-decoration: none;"><i class="fa fa-cube text-yellow"></i>  
                   <span>CoA - Kitting</span>
                   </a>
                 </li>
