--- a/views/operator.ejs
+++ b/views/operator.ejs
@@ -192,7 +192,7 @@
                 </div>
                 <!-- /.box-body --> 
                 <div class="box-footer">
-                    <small style="float:right"><i>Multiple entries will be <b>submitted</b> as one.</i></small>
+                    <small style="float:right"><i>Duplicate entries will be <b>submitted</b> as one.</i></small>
                 </div>
               <!--/.box-footer-->
             </div>
