--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -74,8 +74,7 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="../style/user.png" class="user-image" alt="User Image">
-                <span class="hidden-xs"><%= user_details[0].name %></span>
+                <span class="hidden-xs"><i class="fa fa-sign-out"></i></span>
               </a>
               <ul class="dropdown-menu">
                 
@@ -114,7 +113,6 @@
       </div>
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">DASHBOARD</li>
         <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Home</span></a></li>
         <li class="active treeview">
           <a href="#">
@@ -321,7 +319,6 @@
         </li>
         -->
         
-        <li class="header">ABOUT</li>
         <li><a href="#" style="text-decoration: none;"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
         <li><a href="#" style="text-decoration: none;"><i class="fa fa-info-circle"></i> <span>Information</span></a></li>
       </ul>
@@ -455,10 +452,10 @@
                           
                           <td><% if(rlogs_list[i].process_name.length > 0){ %>
                               <% for(let j=0; j < rlogs_list[i].process_name.length; j++) { %>
-                              <span class="label label-primary"><%= rlogs_list[i].process_name[j].process %></span>
+                              <%= rlogs_list[i].process_name[j].process %>
                               <% } %>
                               <% } else {%>
-                              <span class="label label-primary"><%= rlogs_list[i].process_name.process %></span>
+                              <%= rlogs_list[i].process_name.process %>
                               <% } %>
                           </td>
                           
