--- a/views/kitting.ejs
+++ b/views/kitting.ejs
@@ -79,8 +79,7 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="../style/user.png" class="user-image" alt="User Image">
-                <span class="hidden-xs"><%= user_details[0].name %></span>
+                <span class="hidden-xs"><i class="fa fa-sign-out"></i></span>
               </a>
               <ul class="dropdown-menu">
                 
@@ -119,7 +118,6 @@
       </div>
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">DASHBOARD</li>
         <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Home</span></a></li>
         <li class="active treeview">
           <a href="#">
@@ -326,7 +324,6 @@
         </li>
         -->
         
-        <li class="header">ABOUT</li>
         <li><a href="#" style="text-decoration: none;"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
         <li><a href="#" style="text-decoration: none;"><i class="fa fa-info-circle"></i> <span>Information</span></a></li>
       </ul>
@@ -443,7 +440,7 @@
                         <tr>
                         <td><%= kittingUploadHistory_obj[i].upload_date %></td>
                         <td><%= kittingUploadHistory_obj[i].box %></td>
-                        <td><span class="label label-success"><%= kittingUploadHistory_obj[i].runcard %></span></td>
+                        <td><%= kittingUploadHistory_obj[i].runcard %></td>
                         <td><%= kittingUploadHistory_obj[i].username %></td>
                         </tr>
                     <% } %>
