--- a/views/overallactivity.ejs
+++ b/views/overallactivity.ejs
@@ -76,8 +76,7 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="../style/user.png" class="user-image" alt="User Image">
-                <span class="hidden-xs"><%= user_details[0].name %></span>
+                <span class="hidden-xs"><i class="fa fa-sign-out"></i></span>
               </a>
               <ul class="dropdown-menu">
                 
@@ -116,7 +115,6 @@
       </div>
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">DASHBOARD</li>
         <li><a href="#"  style="text-decoration: none;"><i class="fa fa-home text-yellow"></i> <span>Home</span></a></li>
         <li class="treeview">
           <a href="#">
@@ -318,7 +316,6 @@
         </li>
         -->
         
-        <li class="header">ABOUT</li>
         <li><a href="#" style="text-decoration: none;"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
         <li><a href="#" style="text-decoration: none;"><i class="fa fa-info-circle"></i> <span>Information</span></a></li>
       </ul>
