--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -125,18 +125,18 @@
           <ul class="treeview-menu">
 
             <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Manufacturing</span>
+              <a href="#" style="text-decoration: none;"> <span>Manufacturing</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/kitting" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                <li><a href="/kitting" style="text-decoration: none;">
                   <span>CoA - Kitting</span>
                   </a>
                 </li>
                 <li class="treeview">
-                  <a href="#" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                  <a href="#" style="text-decoration: none;">
                   <span>CoA - Operator</span>
                   <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
@@ -144,32 +144,32 @@
                   </a>
                   <ul class="treeview-menu">
                     <li>
-                      <a href="/acs/17" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/17" style="text-decoration: none;">
                         <span>Line 17</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/18" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/18" style="text-decoration: none;">
                         <span>Line 18</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/19" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/19" style="text-decoration: none;">
                         <span>Line 19</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/20" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/20" style="text-decoration: none;">
                         <span>Line 20</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/21" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/21" style="text-decoration: none;">
                         <span>Line 21</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/22" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/22" style="text-decoration: none;">
                         <span>Line 22</span>
                       </a>
                     </li>
@@ -179,27 +179,27 @@
             </li>
 
             <li class="active treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o text-yellow"></i> <span>Engineering</span>
+              <a href="#" style="text-decoration: none;"> <span>Engineering</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-inbox text-yellow"></i>  
-                  <span>Activity</span>
+                <li><a href="#" style="text-decoration: none;">
+                  <span style="font-weight:600">Activity</span>
                   </a>
                 </li>
               </ul>
             </li>
 
             <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>QA</span>
+              <a href="#" style="text-decoration: none;"> <span>QA</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-certificate"></i>  
+                <li><a href="/coauploader" style="text-decoration: none;">
                   <span>Certificate of Analysis</span>
                   </a>
                 </li>
@@ -218,50 +218,6 @@
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
-
-          <ul class="treeview-menu">
-
-            <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Fab Dashboard</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>Process name here...</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-
-            <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Squeegee Pressure</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>NTM</span>
-                  </a>
-                </li>
-
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>PTM</span>
-                  </a>
-                </li>
-
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>PLM</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-
-
-
-          </ul>
         </li>
        
         
@@ -275,9 +231,9 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Engineering</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Manufacturing</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Yield</a></li>
+            <li><a href="#"> Engineering</a></li>
+            <li><a href="#"> Manufacturing</a></li>
+            <li><a href="#"> Yield</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -289,7 +245,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-circle-o"></i> (sample process list here)</a></li>
+                <li><a href="#"> (sample process list here)</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -300,8 +256,8 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Cycle time </a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> WIP & Outs </a></li>
+            <li><a href="#"> Cycle time </a></li>
+            <li><a href="#"> WIP & Outs </a></li>
           </ul>
         </li> -->
         <!--
@@ -314,7 +270,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-circle-o"></i> CoA Uploader</a></li>
+            <li><a href="/coauploader" style="text-decoration: none;"> CoA Uploader</a></li>
           </ul>
         </li>
         -->
