--- a/views/coauploader.ejs
+++ b/views/coauploader.ejs
@@ -120,51 +120,51 @@
           <ul class="treeview-menu">
 
             <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Manufacturing</span>
+              <a href="#" style="text-decoration: none;"> <span>Manufacturing</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/kitting" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                <li><a href="/kitting" style="text-decoration: none;">
                   <span>CoA - Kitting</span>
                   </a>
                 </li>
                 <li class="treeview">
-                  <a href="#" style="text-decoration: none;"><i class="fa fa-cube"></i>  
-                  <span>CoA - Operator</span>
+                  <a href="#" style="text-decoration: none;">
+                  <span style="font-weight:600">CoA - Operator</span>
                   <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
                   </span>
                   </a>
                   <ul class="treeview-menu">
                     <li>
-                      <a href="/acs/17" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/17" style="text-decoration: none;">
                         <span>Line 17</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/18" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/18" style="text-decoration: none;">
                         <span>Line 18</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/19" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/19" style="text-decoration: none;">
                         <span>Line 19</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/20" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/20" style="text-decoration: none;">
                         <span>Line 20</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/21" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/21" style="text-decoration: none;">
                         <span>Line 21</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/22" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/22" style="text-decoration: none;">
                         <span>Line 22</span>
                       </a>
                     </li>
@@ -174,13 +174,13 @@
             </li>
 
             <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Engineering</span>
+              <a href="#" style="text-decoration: none;"> <span>Engineering</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/activities" style="text-decoration: none;"><i class="fa fa-inbox"></i>  
+                <li><a href="/activities" style="text-decoration: none;"> 
                   <span>Activity</span>
                   </a>
                 </li>
@@ -188,13 +188,13 @@
             </li>
 
             <li class="active treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o text-yellow"></i> <span>QA</span>
+              <a href="#" style="text-decoration: none;"> <span>QA</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-certificate text-yellow"></i>  
+                <li><a href="#" style="text-decoration: none;">
                   <span>Certificate of Analysis</span>
                   </a>
                 </li>
@@ -212,47 +212,6 @@
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
-          <ul class="treeview-menu">
-
-            <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Fab Dashboard</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>Process name here...</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-            
-            <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Squeegee Pressure</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>NTM</span>
-                  </a>
-                </li>
-
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>PTM</span>
-                  </a>
-                </li>
-
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>PLM</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-
-          </ul>
         </li>
 
         <!--<li class="header"><span>FAB<span style="color:orange;margin:1px;">4</span></li>-->
@@ -265,9 +224,9 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Engineering</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Manufacturing</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Yield</a></li>
+            <li><a href="#"> Engineering</a></li>
+            <li><a href="#"> Manufacturing</a></li>
+            <li><a href="#"> Yield</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -279,7 +238,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-circle-o"></i> (sample process list here)</a></li>
+                <li><a href="#"> (sample process list here)</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -290,8 +249,8 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Cycle time </a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> WIP & Outs </a></li>
+            <li><a href="#"> Cycle time </a></li>
+            <li><a href="#"> WIP & Outs </a></li>
           </ul>
         </li> -->
         
