--- a/views/kitting.ejs
+++ b/views/kitting.ejs
@@ -60,7 +60,7 @@
   
  <header class="main-header">
   <!-- Logo -->
-  <a href="#" class="logo" style="text-decoration: none;">
+  <a href="#" class="logo" >
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini">f4<span style="color:orange;margin:1px;">m</span></span>
         <!-- logo for regular state and mobile devices -->
@@ -69,7 +69,7 @@
       <!-- Header Navbar: style can be found in header.less -->
       <nav class="navbar navbar-static-top">
         <!-- Sidebar toggle button-->
-        <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button"  style="text-decoration: none;">
+        <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button"  >
           <span class="sr-only">Toggle navigation</span>
         </a>
   
@@ -112,13 +112,13 @@
           <img src="../style/user.png" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p><a href="#" style="text-decoration: none;"><%= user_details[0].name %></a></p>
+          <p><a href="#" ><%= user_details[0].name %></a></p>
           <a href="#"><i class="fa fa-vcard text-green"></i> <%= user_details[0].department%></a>
         </div>
       </div>
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li><a href="/overallactivity"  style="text-decoration: none;"><i class="fa fa-home"></i> <span>Home</span></a></li>
+        <li><a href="/overallactivity"  ><i class="fa fa-home"></i> <span>Home</span></a></li>
         <li class="active treeview">
           <a href="#">
             <i class="fa fa-cogs"></i> 
@@ -130,18 +130,18 @@
           <ul class="treeview-menu">
 
             <li class="active treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o text-yellow"></i> <span>Manufacturing</span>
+              <a href="#" > <span>Manufacturing</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li class="active treeview"><a href="/kitting" style="text-decoration: none;"><i class="fa fa-cube text-yellow"></i>  
-                  <span>CoA - Kitting</span>
+                <li class="active treeview"><a href="/kitting" >
+                  <span style="font-weight:600">CoA - Kitting</span>
                   </a>
                 </li>
                 <li class="treeview">
-                  <a href="#" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                  <a href="#" >
                   <span>CoA - Operator</span>
                   <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
@@ -149,32 +149,32 @@
                   </a>
                   <ul class="treeview-menu">
                     <li>
-                      <a href="/acs/17" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/17" >
                         <span>Line 17</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/18" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/18" >
                         <span>Line 18</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/19" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/19" >
                         <span>Line 19</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/20" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/20" >
                         <span>Line 20</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/21" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/21" >
                         <span>Line 21</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/22" style="text-decoration: none;"><i class="fa fa-cube"></i>  
+                      <a href="/acs/22" >
                         <span>Line 22</span>
                       </a>
                     </li>
@@ -184,13 +184,13 @@
             </li>
 
             <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Engineering</span>
+              <a href="#" > <span>Engineering</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/activities" style="text-decoration: none;"><i class="fa fa-inbox"></i>  
+                <li><a href="/activities" >
                   <span>Activity</span>
                   </a>
                 </li>
@@ -198,13 +198,13 @@
             </li>
 
             <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>QA</span>
+              <a href="#" > <span>QA</span>
                 <span class="pull-right-container">
                   <i class="fa fa-angle-left pull-right"></i>
                 </span>
               </a>
               <ul class="treeview-menu">
-                <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-certificate"></i>  
+                <li><a href="/coauploader" >
                   <span>Certificate of Analysis</span>
                   </a>
                 </li>
@@ -223,50 +223,6 @@
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
-
-          <ul class="treeview-menu">
-
-            <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Fab Dashboard</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>Process name here...</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-
-            <li class="treeview">
-              <a href="#" style="text-decoration: none;"><i class="fa fa-circle-o"></i> <span>Squeegee Pressure</span>
-                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>NTM</span>
-                  </a>
-                </li>
-
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>PTM</span>
-                  </a>
-                </li>
-
-                <li><a href="#" style="text-decoration: none;"><i class="fa fa-tint"></i>  
-                  <span>PLM</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-
-
-
-          </ul>
         </li>
        
         
@@ -280,9 +236,9 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Engineering</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Manufacturing</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Yield</a></li>
+            <li><a href="#"> Engineering</a></li>
+            <li><a href="#"> Manufacturing</a></li>
+            <li><a href="#"> Yield</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -294,7 +250,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-circle-o"></i> (sample process list here)</a></li>
+                <li><a href="#"> (sample process list here)</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -305,13 +261,13 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Cycle time </a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> WIP & Outs </a></li>
+            <li><a href="#"> Cycle time </a></li>
+            <li><a href="#"> WIP & Outs </a></li>
           </ul>
         </li> -->
         <!--
         <li class="active treeview">
-          <a href="#"  style="text-decoration: none;">
+          <a href="#"  >
             <i class="fa fa-database"></i>
             <span>Services</span>
             <span class="pull-right-container">
@@ -319,13 +275,13 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-circle-o"></i> CoA Uploader</a></li>
+            <li><a href="/coauploader" > CoA Uploader</a></li>
           </ul>
         </li>
         -->
         
-        <li><a href="#" style="text-decoration: none;"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
-        <li><a href="#" style="text-decoration: none;"><i class="fa fa-info-circle"></i> <span>Information</span></a></li>
+        <li><a href="#" ><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+        <li><a href="#" ><i class="fa fa-info-circle"></i> <span>Information</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
