--- a/views/404.ejs
+++ b/views/404.ejs
@@ -58,7 +58,7 @@
     <!-- Main content -->
     <section class="content" style="padding-top:250px;">
       <div class="error-page">
-        <h2 class="headline text-yellow"> Ngek!</h2>
+        <h2 class="headline text-yellow"> 404</h2>
 
         <div class="error-content">
           <h3><i class="fa fa-warning text-yellow"></i> Unable to authenticate.</h3>
