--- a/views/coauploader.ejs
+++ b/views/coauploader.ejs
@@ -75,7 +75,7 @@
                 <!-- Menu Body -->
                 <li class="user-body">
                   <div class="pull-right">
-                    <a href="/logout" class="btn btn-default btn-flat">Sign out</a>
+                    <a href="/logout" class="btn btn-block btn-default btn-flat" style="font-size:10px;color:#fff">Log out</a>
                   </div>
                   <!-- /.row -->
                 </li>
