--- a/views/kitting.ejs
+++ b/views/kitting.ejs
@@ -395,7 +395,7 @@
                     <% for (let i=0; i < kittingUploadHistory_obj.length; i++) {  %>
                         <tr>
                         <td><%= kittingUploadHistory_obj[i].upload_date %></td>
-                        <td><%= kittingUploadHistory_obj[i].box %></td>
+                        <td><%= kittingUploadHistory_obj[i].box_id %></td>
                         <td><%= kittingUploadHistory_obj[i].runcard %></td>
                         <td><%= kittingUploadHistory_obj[i].username %></td>
                         </tr>
