--- a/public/style/style.css
+++ b/public/style/style.css
@@ -34,11 +34,31 @@
   margin-bottom: 30px;
 }
 
-.form-control {
+.form-control-login {
   position: relative;
-  font-size: 16px;
+  font-size: 14px;
   height: auto;
-  padding: 10px;
+  padding: 5px 2px 2px;
+  border-top: none;
+  border-left: none;
+  border-right:none;
+  font-family: monospace;
+  border-color: #eee;
+}
+
+.usernameLabel{
+  font-size: 10px;
+  color: gray;
+}
+
+.passwordLabel{
+  font-size: 10px;
+  color: gray;
+}
+
+.bysigning{
+  font-size: 12px;
+  color: #999;
 }
 
 input[type="text"] {
