--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="../dist/ionicons/css/ionicons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="../dist/css/AdminLTE.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="../style/style.css">
 
 
     <!-- Uploader form-->
@@ -47,18 +49,23 @@
   <!-- /.login-logo -->
   <div class="login-box-body">
     <p class="login-box-msg">Sign in to start your session</p>
-    
-
+    <br/>
     <form action="" method="POST" id="login_auth" name="login_auth">
       <div class="form-group has-feedback">
-        <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+        <span class="usernameLabel">Username:</span>
+        <input type="text" class="form-control form-control-login" id="username" name="username" placeholder="">
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+        <span class="passwordLabel">Password:</span>
+        <input type="password" class="form-control form-control-login" id="password" name="password" placeholder="">
       </div>
+      <br/>
       <div class="row">
         <!-- /.col -->
-        <div class="col-xs-12">
+        <div class="col-xs-8">
+          <p class="bysigning">By signing in you indicate and agree that you are not using outlook credentials. </p>
+        </div>
+        <div class="col-xs-4">
           <button type="submit" id="btn-login" class="btn btn-primary btn-block btn-flat">Sign In</button>
         </div>
         <!-- /.col -->
@@ -72,7 +79,7 @@
 
     <br/>
    
-    <p class="login-box-msg" style="font-size:12px;">Do not use your Outlook credentials</p>
+    
 
   </div>
   <!-- /.login-box-body -->
