add bysigning in

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,7 +63,7 @@
       <div class="row">
         <!-- /.col -->
         <div class="col-xs-8">
-          <p class="bysigning">By signing up you indicate and agree that this app is a <a href="https://en.wikipedia.org/wiki/Prototype" target="_blank">prototype</a> and will be subject to change. <!--<a href="mailto:kevin.mocorro@sunpowercorp.com?subject=Fab4Meta | Sign Up&body=Fill up the required details:%0D%0A%0D%0AUsername:%0D%0AFirstname:%0D%0ALastname:%0D%0AEmail:%0D%0ADepartment:%0D%0A%0D%0AOnce registration is completed, you'll receive email verification link to change your password.%0D%0A%0D%0AThanks,%0D%0AKevin M.">Sign Up</a>--> </p>
+          <p class="bysigning">By signing in you indicate and agree that this app is a <a href="https://en.wikipedia.org/wiki/Prototype" target="_blank">prototype</a> and will be subject to change. <!--<a href="mailto:kevin.mocorro@sunpowercorp.com?subject=Fab4Meta | Sign Up&body=Fill up the required details:%0D%0A%0D%0AUsername:%0D%0AFirstname:%0D%0ALastname:%0D%0AEmail:%0D%0ADepartment:%0D%0A%0D%0AOnce registration is completed, you'll receive email verification link to change your password.%0D%0A%0D%0AThanks,%0D%0AKevin M.">Sign Up</a>--> </p>
         </div>
         <div class="col-xs-4">
           <button type="submit" id="btn-login" class="btn btn-primary btn-block btn-flat">Sign In</button>
